# advent-of-code

./: .gitignore  Day1.hs  Day10.hs  Day12.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Guardfile  day1.hs  day2.hs  day3.hs  run
2015-haskell/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day19.hs  Day2.hs  Day20.hs  Day20_benchmarking.hs  Day4.hs  Day7.hs  Day9.hs  runtime.hs  runtime.sh
2016-scala/: .gitignore  build.sbt
2016-scala/src/main/scala/: Day1.scala  Day2.scala  Day2Alternative.scala  Day3.scala  Day4.scala  Day5.scala  Day6.scala  Day7.scala  Day8.scala
2016-scala/src/test/scala/: Day1Spec.scala  Day2Spec.scala  Day3Spec.scala  Day4Spec.scala  Day5Spec.scala  Day6Spec.scala  Day7Spec.scala  Day8Spec.scala  TestUtils.scala
2017-haskell/: .gitignore  simple.cabal  stack.yaml
2017-haskell/app/: Main.hs
2017-haskell/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  DayData.hs
2018-clojure/: .lein-failures  project.clj  shell.nix  startemacs.sh
2018-clojure/src/advent_of_code/: day1.clj  day2.clj  day3.clj  day4.clj
2018/clojure/: CHANGELOG.md  project.clj  shell.nix
2018/clojure/src/advent_of_code/: day1.clj  day2.clj  day3.clj
2018/haskell/: package.yaml
2018/haskell/app/: Main.hs
2018/haskell/src/: Day1.hs  Day2.hs  TestHelpers.hs
2018/rust/: Cargo.toml
2018/rust/src/: day1.rs
2019/haskell/: haskell-exe-list.prof  haskell-exe-vector-unboxed.prof  haskell.cabal  package.yaml
2019/haskell/app/: Main.hs
2019/haskell/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Day9_helper.hs  IntCode.hs  TestHelpers.hs  Util.hs
2019/haskell/test/: .dir-locals.el  Day10Tests.hs  Day11Tests.hs  Day12Tests.hs  Day13Tests.hs  Day14Tests.hs  Day15Tests.hs  Day1Tests.hs  Day2Tests.hs  Day3Tests.hs  Day4Tests.hs  Day5Tests.hs  Day6Tests.hs  Day7Tests.hs  Day8Tests.hs  Day9Tests.hs  TestHelpers.hs  TestMain.hs
2019/rust/: .gitignore
2019/rust/src/: day1.rs  main.rs
2020/haskell/: ghcid-test  haskell.cabal  package.yaml  stack.yaml
2020/haskell/benchmark/: BenchMain.hs  Day1Bench.hs  Day2Bench.hs  Day3Bench.hs  Day4Bench.hs
2020/haskell/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Util.hs
2020/haskell/test/: Day1Tests.hs  Day2Tests.hs  Day3Tests.hs  Day4Tests.hs  TestHelpers.hs  TestMain.hs
(+1 files in other folders)
