name:                simple
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description: See README.md        

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  exposed-modules: Lib
                 , Day1
                 , Day2
                 , Day3
                 , Day4
                 , Day5
                 , Day6
                 , Day7
                 , Day8
                 , Day9
                 , Day10
                 , Day11
                 , Day12
                 , Day13
                 , Day14
  build-depends: base               >= 4.7 && < 5,
                 containers         >= 0.5,
                 grid               >= 7.8.9,
                 lens               >= 4.15.4,
                 megaparsec         >= 6.0.0,
                 monad-loops        >= 0.4.3,
                 mtl                >= 2.2.1,
                 parser-combinators >= 0.2.0,
                 split              >= 0.2.3.2,
                 text               >= 1.2,
                 tasty              >= 0.11.3,
                 tasty-hunit        >= 0.9.2,
                 turtle             >= 1.3.6,
                 Unique             >= 0.4.7.1,
                 vector             >= 0.12.0.1

executable simple-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple
                     , containers >= 0.5
                     , text >= 1.2
                     , turtle >= 1.3.6
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple
